--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
+  "scripts": {
+    "start": "npm --prefix client start",
+    "dev": "npm run dev --prefix client",
+    "compile": "npx hardhat compile && cp artifacts/contracts/Chai.sol/chai.json client/src/contracts/chai.json",
+    "deploy": "npx hardhat run scripts/deploy.js --network sepolia"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "hardhat": "^2.22.13"
   },
   "dependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "create-react-app": "^5.0.1",
+    "@nomiclabs/hardhat-ethers": "^1.0.0",
+    "create-react-app": "^5.1.0",
     "dotenv": "^16.4.5"
   }
 }
